[tool.poetry]
name = "test-repo"
version = "0.1.0"
description = ""
authors = ["OktawianCzakiert <oktawian.czakiert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
